--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>起步</title>
-    <script src="https://unpkg.com/lodash@4.16.6"></script>
+    <!-- <script src="https://unpkg.com/lodash@4.16.6"></script> -->
   </head>
   <body>
     <script src="./src/index.js"></script>
